# assert_has_field

./: Cargo.toml  README.md
src/: lib.rs
