[package]
name = "assert_has_field"
version = "0.1.2"
edition = "2024"
authors = ["Dmitrii Demenev <dmitrii@searchless.ca>"]
description = "A Rust macro for checking if a struct has a specific field."
documentation = "https://docs.rs/assert_has_field"
readme = "README.md"
keywords = [
    "macro",
    "assert",
    "field",
    "type",
]
categories = [
    "development-tools",
    "development-tools::testing",
    "no-std",
    "no-std::no-alloc",
    "rust-patterns",
]
license = "MIT OR Apache-2.0"
repository = "https://github.com/JohnScience/assert_has_field"

[dependencies]
# type-equalities = "0.3.1"
type-equalities = "0"
